--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,49 @@
-venv
-.tox
-test-result
+### Don't account for the accidentally compiled python
 *.pyc
 __pycache__
-*.egg-info
 *.log
-build
-dist
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Sphinx documentation
+docs/_build/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# CodCov specific
+*.gcno
+*.gcda
+*.gcov
